--- a/package.json
+++ b/package.json
@@ -11,6 +11,10 @@
       "turf-module": "./turf-module.js"
     }
   },
+  "keywords": [
+    "node-red",
+    "turf"
+  ],
   "dependencies": {
     "@turf/turf": "^6.5.0",
     "jquery-modal": "^0.9.2",
